--- a/app/src/main/res/layout/list_item_content.xml
+++ b/app/src/main/res/layout/list_item_content.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -8,7 +8,8 @@
         <TextView
                 android:id="@+id/textName"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                tools:text="react-tetris"/>
 
     </LinearLayout>
 
