--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,27 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-        <EditText
-                android:id="@+id/editTextSearch"
+        <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        <Button
-                android:id="@+id/buttonSearch"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:focusable="true"
+                android:focusableInTouchMode="true">
 
-        />
-
+            <EditText
+                    android:id="@+id/editTextSearch"
+                    style="@style/AppTheme.CustomEditText"
+                    android:hint="@string/hint_search"
+                    android:imeOptions="actionDone"
+                    android:inputType="text|textCapSentences"
+                    tools:ignore="Autofill"/>
+            <Button
+                    android:id="@+id/buttonSearch"
+                    style="@style/AppTheme.ButtonSearch"
+                    android:text="@string/search"
+                    android:visibility="gone"
+                    android:layout_gravity="end|center_vertical"
+            />
+        </FrameLayout>
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_repos"
                 android:layout_width="match_parent"
