--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,44 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
->
-
-    <data>
-
-    </data>
-
-    <LinearLayout
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical">
+    <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-        <FrameLayout
+            android:layout_height="wrap_content"
+            app:elevation="0dp"
+            android:background="@android:color/transparent">
+
+        <!-- toolbar title text appearance only works by settings the style attribute, not the theme or popupOverlay attribute -->
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:fitsSystemWindows="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:focusable="true"
-                android:focusableInTouchMode="true">
+                android:minHeight="?attr/actionBarSize"
+                android:background="@color/retroBlue"
+                android:theme="@style/AppTheme.Toolbar"/>
 
-            <EditText
-                    android:id="@+id/editTextSearch"
-                    style="@style/AppTheme.CustomEditText"
-                    android:hint="@string/hint_search"
-                    android:imeOptions="actionDone"
-                    android:inputType="text|textCapSentences"
-                    tools:ignore="Autofill"/>
-            <Button
-                    android:id="@+id/buttonSearch"
-                    style="@style/AppTheme.ButtonSearch"
-                    android:text="@string/search"
-                    android:visibility="gone"
-                    android:layout_gravity="end|center_vertical"
-            />
-        </FrameLayout>
-        <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_repos"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:listitem="@layout/list_item_content">
+    </android.support.design.widget.AppBarLayout>
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
+
+        <EditText
+                android:id="@+id/editTextSearch"
+                style="@style/AppTheme.CustomEditText"
+                android:hint="@string/hint_search"
+                android:imeOptions="actionDone"
+                android:inputType="text|textCapSentences"
+                tools:ignore="Autofill"/>
+        <Button
+                android:id="@+id/buttonSearch"
+                style="@style/AppTheme.ButtonSearch"
+                android:text="@string/go"
+                android:visibility="gone"
+                android:layout_gravity="end|center_vertical"
+        />
+    </FrameLayout>
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_repos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/list_item_content">
 
 
-        </android.support.v7.widget.RecyclerView>
-    </LinearLayout>
+    </android.support.v7.widget.RecyclerView>
+</LinearLayout>
 
-</layout>
