--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,5 +65,20 @@
         <item name="android:background">@color/colorPrimaryDark</item>
     </style>
 
+    <style name="AppTheme.Splash">
+        <item name="android:windowBackground">@drawable/bg_splash</item>
+    </style>
+
+    <style name="AppTheme.Toolbar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="titleTextAppearance">@style/TextAppearance.AppTheme.Toolbar.Title</item>
+        <item name="colorControlNormal">@color/retroWhite</item>
+        <item name="android:actionMenuTextColor">@color/retroWhite</item>
+    </style>
+
+    <style name="TextAppearance.AppTheme.Toolbar.Title" parent="TextAppearance.AppCompat.Medium.Inverse">
+        <item name="android:textColor">@color/retroWhite</item>
+        <item name="android:textSize">@dimen/text_size_medium</item>
+    </style>
+
 
 </resources>
