--- a/app/src/main/res/layout/list_item_content.xml
+++ b/app/src/main/res/layout/list_item_content.xml
@@ -1,35 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-            android:layout_width="match_parent"
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        style="@style/AppTheme.ListItem">
+
+    <TextView
+            android:id="@+id/textLanguage"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            style="@style/AppTheme.ListItem">
+            tools:text="javascript"/>
+    <TextView
+            android:id="@+id/textName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="react-tetris"
+            android:textAppearance="@style/TextAppearance.AppTheme.Medium"/>
 
-        <TextView
-                android:id="@+id/textLanguage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="javascript"/>
-        <TextView
-                android:id="@+id/textName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="react-tetris"
-                android:textAppearance="@style/TextAppearance.AppTheme.Medium"/>
+    <View
+            style="@style/AppTheme.Divider"
+            android:layout_width="match_parent"/>
 
-        <TextView
-                android:id="@+id/textDescription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="a really cool repository"
-                android:textAppearance="@style/TextAppearance.AppTheme.Medium"/>
+</LinearLayout>
 
-        <View
-                style="@style/AppTheme.Divider"
-                android:layout_width="match_parent"/>
-
-    </LinearLayout>
-
-</layout>
