--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
 
     <dimen name="padding_tiny">4dp</dimen>
     <dimen name="padding_normal">16dp</dimen>
+    <dimen name="padding_big">24dp</dimen>
 
     <dimen name="margin_normal">16dp</dimen>
 
@@ -14,4 +15,5 @@
     <dimen name="height_text_view_list">36dp</dimen>
 
     <dimen name="divider_height">1dp</dimen>
+    <dimen name="peek_height">32dp</dimen>
 </resources>
