--- a/app/src/main/res/layout/layout_repository_detail.xml
+++ b/app/src/main/res/layout/layout_repository_detail.xml
@@ -2,10 +2,12 @@
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                            android:layout_height="wrap_content"
+                                            android:layout_height="match_parent"
                                             android:layout_width="match_parent"
                                             app:behavior_hideable="false"
-                                            app:behavior_peekHeight="@dimen/peek_height"
+                                            app:behavior_peekHeight="0dp"
+                                            app:layout_anchorGravity=""
+                                            android:background="@color/retroBlue"
                                             app:layout_behavior="@string/bottom_sheet_behavior">
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="match_parent"
